# SAP-BTP-Trial-ABAP-ADT-MCP

./: .gitignore  README.md  README.zh-CN.md  SAP-ADT-MCP-问题.md  pyproject.toml  sap-mcp.example.yaml
app/: __init__.py  config.py  errors.py  mcp_server.py  security.py  server.py
app/auth/: __init__.py  browser_sso.py
app/connectors/: __init__.py  adt.py
app/services/: __init__.py  abap_dev_gateway.py
sap_mcp/: callback.py  config.py  errors.py  mcp_server.py  security.py
sap_mcp/auth/: browser_sso.py
sap_mcp/connectors/: adt.py  adt_http.py  adt_metadata.py  adt_paths.py  adt_quality.py  adt_registry.py
sap_mcp/connectors/core/: authorization.py  http.py  paths.py  registry.py
sap_mcp/connectors/lifecycle/: activation.py  lock.py  quality.py  syntax_check.py  transport.py
sap_mcp/connectors/objects/: creation.py  creation_strategies.py  delete.py  function_module.py  search.py  signature.py  source.py  where_used.py
sap_mcp/connectors/official/: __init__.py  activation.py  base.py  business_services.py  constants.py  creation.py  destinations.py  generators.py  transports.py
sap_mcp/services/: abap_dev_gateway.py  official_gateway.py
sap_mcp/tools/: __init__.py  official.py  workflows.py
tests/: test_abap_dev.py  test_config.py  test_server.py
