[project]
name = "sap-mcp"
version = "0.1.0"
description = "HTTP MCP server for SAP ABAP Development Tools access through ADT APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.8.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.1",
  "starlette>=0.37.0",
  "uvicorn[standard]>=0.29.0",
]

[project.scripts]
sap-mcp = "sap_mcp.server:main"
sap-mcp-stdio = "sap_mcp.stdio_server:main"

[tool.setuptools.packages.find]
include = ["sap_mcp*"]
